# libanimation-dbus

./: README.md  meson.build
animations-dbus/: animations-dbus-client-effect.c  animations-dbus-client-effect.h  animations-dbus-client-object.c  animations-dbus-client-object.h  animations-dbus-client-surface.c  animations-dbus-client-surface.h  animations-dbus-client.h  animations-dbus-errors.c  animations-dbus-errors.h  animations-dbus-main-context-private.c  animations-dbus-main-context-private.h  animations-dbus-server-animation-manager.c  animations-dbus-server-animation-manager.h  animations-dbus-server-effect-bridge-interface.c  animations-dbus-server-effect-bridge-interface.h  animations-dbus-server-effect-factory-interface.c  animations-dbus-server-effect-factory-interface.h  animations-dbus-server-effect.c  animations-dbus-server-effect.h  animations-dbus-server-object.c  animations-dbus-server-object.h  animations-dbus-server-skeleton-properties.c  animations-dbus-server-skeleton-properties.h  animations-dbus-server-surface-attached-effect-interface.c  animations-dbus-server-surface-attached-effect-interface.h  animations-dbus-server-surface-bridge-interface.c  animations-dbus-server-surface-bridge-interface.h  animations-dbus-server-surface.c  animations-dbus-server-surface.h  animations-dbus-server-types.h  animations-dbus-server.h  animations-dbus-version.h.in  animations-dbus.h  meson.build
data/: com.endlessm.Libanimation.xml
debian/: changelog  control  copyright  gir1.2-animations-dbus.install  libanimations-dbus-dev.install  libanimations-dbus0.install
examples/: client.js  client_sync.js
tests/: meson.build  tap.py
tests/libanimations-dbus/: testClient.js
